--- a/README
+++ b/README
@@ -887,15 +887,24 @@ IMGMOUNT
               the files available from inside DOSBox.
         none: DOSBox will make no attempt to read the file system on the disk.
               This is useful if you need to format it or if you want to boot
-              the disk using the BOOT command. When using the "none"
-              filesystem, you must specify the drive number (2 or 3,
-              where 2 = master, 3 = slave) rather than a drive letter.
-              For example, to mount a 70MB image as the slave drive device,
-              you would type (without the quotes):
-                "imgmount 3 d:\test.img -size 512,63,16,142 -fs none"
-                Compare this with a mount to be able to access the drive
-                within DOSBox, which would read as:
-                "imgmount e: d:\test.img -size 512,63,16,142"
+              the disk using the BOOT command.
+
+              When using the "none" filesystem, you must specify a drive number:
+
+              Drive number  Will be mounted as ...
+              ------------  ----------------------
+              0             A: in DOS
+              1             B: in DOS, if A: is already mounted
+              2             C: in DOS
+              3             D: in DOS, if C: is already mounted
+
+              For example, if C: has already been mounted and you want
+              to mount a 70MB image as D:, you would use:
+                imgmount 3 d:\test.img -size 512,63,16,142 -fs none
+
+              Note how this differs versus imgmount'ing an image with
+              read-only access, which is:
+                imgmount e: d:\test.img -size 512,63,16,142
 
   -size
      The Cylinders, Heads and Sectors of the drive.
@@ -936,8 +945,8 @@ BOOT
   [-l driveletter]
      This parameter allows you to specify the drive to boot from.
      The default is the A drive, the floppy drive. You can also boot
-     a hard drive image mounted as master by specifying "-l C"
-     without the quotes, or the drive as slave by specifying "-l D"
+     a hard drive image mounted as primary by specifying "-l C"
+     without the quotes, or the drive as secondary by specifying "-l D"
 
    cart.jrc (PCjr only)
      When emulation of a PCjr is enabled, cartridges can be loaded with
