--- a/contrib/translations/utf-8/en/en-0.77.0-alpha.txt
+++ b/contrib/translations/utf-8/en/en-0.77.0-alpha.txt
@@ -1,6 +1,6 @@
 :CONFIG_FULLSCREEN
 Start DOSBox directly in fullscreen.
-Press " MMOD2_NAME "+Enter to switch back to window.
+Press %s+Enter to switch back to window.
 .
 :CONFIG_DISPLAY
 Number of display to use; values depend on OS and user settings.
@@ -44,12 +44,12 @@ Choose a mouse control method:
                    input sent to the game.
 Choose how middle-clicks are handled (second parameter):
    middlegame:     Middle-clicks are sent to the game
-                   (" PRIMARY_MOD_NAME "+F10 uncaptures the mouse).
+                   (%s+F10 uncaptures the mouse).
    middlerelease:  Middle-clicks are used to uncapture the mouse
                    (not sent to the game). However, middle-clicks
                    will be sent to the game in fullscreen or when
                    seamless control is set.
-                   " PRIMARY_MOD_NAME "+F10 will also uncapture the mouse.
+                   %s+F10 will also uncapture the mouse.
 Defaults (if not present or incorrect): seamless middlerelease
 .
 :CONFIG_SENSITIVITY
@@ -154,7 +154,7 @@ Cycles can be set in 3 ways:
                   handle.
 .
 :CONFIG_CYCLEUP
-Number of cycles to decrease/increase with keycombos. (" PRIMARY_MOD_NAME "+F11/" PRIMARY_MOD_NAME "+F12)
+Number of cycles to decrease/increase with keycombos. (%s+F11/%s+F12)
 .
 :CONFIG_CYCLEDOWN
 Setting it lower than 100 will be a percentage.
@@ -743,18 +743,18 @@ Additionally, you can use imgmount to mount iso or cue/bin images:
 These are the default keybindings.
 They can be changed in the [33mkeymapper[0m.
 
-[33;1m" MMOD2_NAME "+Enter[0m  Switch between fullscreen and window mode.
-[33;1m" MMOD2_NAME "+Pause[0m  Pause/Unpause emulator.
-[33;1m" PRIMARY_MOD_NAME "+F1[0m   " PRIMARY_MOD_PAD " Start the [33mkeymapper[0m.
-[33;1m" PRIMARY_MOD_NAME "+F4[0m   " PRIMARY_MOD_PAD " Swap mounted disk image, update directory cache for all drives.
-[33;1m" PRIMARY_MOD_NAME "+F5[0m   " PRIMARY_MOD_PAD " Save a screenshot.
-[33;1m" PRIMARY_MOD_NAME "+F6[0m   " PRIMARY_MOD_PAD " Start/Stop recording sound output to a wave file.
-[33;1m" PRIMARY_MOD_NAME "+F7[0m   " PRIMARY_MOD_PAD " Start/Stop recording video output to a zmbv file.
-[33;1m" PRIMARY_MOD_NAME "+F9[0m   " PRIMARY_MOD_PAD " Shutdown emulator.
-[33;1m" PRIMARY_MOD_NAME "+F10[0m  " PRIMARY_MOD_PAD " Capture/Release the mouse.
-[33;1m" PRIMARY_MOD_NAME "+F11[0m  " PRIMARY_MOD_PAD " Slow down emulation.
-[33;1m" PRIMARY_MOD_NAME "+F12[0m  " PRIMARY_MOD_PAD " Speed up emulation.
-[33;1m" MMOD2_NAME "+F12[0m    Unlock speed (turbo button/fast forward).
+[33;1m%s+Enter[0m  Switch between fullscreen and window mode.
+[33;1m%s+Pause[0m  Pause/Unpause emulator.
+[33;1m%s+F1[0m   %s Start the [33mkeymapper[0m.
+[33;1m%s+F4[0m   %s Swap mounted disk image, update directory cache for all drives.
+[33;1m%s+F5[0m   %s Save a screenshot.
+[33;1m%s+F6[0m   %s Start/Stop recording sound output to a wave file.
+[33;1m%s+F7[0m   %s Start/Stop recording video output to a zmbv file.
+[33;1m%s+F9[0m   %s Shutdown emulator.
+[33;1m%s+F10[0m  %s Capture/Release the mouse.
+[33;1m%s+F11[0m  %s Slow down emulation.
+[33;1m%s+F12[0m  %s Speed up emulation.
+[33;1m%s+F12[0m    Unlock speed (turbo button/fast forward).
 
 .
 :PROGRAM_BOOT_NOT_EXIST
@@ -773,7 +773,7 @@ Image file is read-only! Might create problems.
 This command boots DOSBox from either a floppy or hard disk image.
 
 For this command, one can specify a succession of floppy disks swappable
-by pressing " PRIMARY_MOD_NAME "+F4, and -l specifies the mounted drive to boot from.  If
+by pressing %s+F4, and -l specifies the mounted drive to boot from.  If
 no drive letter is specified, this defaults to booting from the A drive.
 The only bootable drive letters are A, C, and D.  For booting from a hard
 drive (C or D), the image should have already been mounted using the
@@ -851,7 +851,7 @@ Where:
   [36;1mBOOTIMAGE[0m is a bootable disk image with specified -size GEOMETRY:
             bytes-per-sector,sectors-per-head,heads,cylinders
 Notes:
-  - " PRIMARY_MOD_NAME "+F4 swaps & mounts the next CDROM-SET or IMAGEFILE, if provided.
+  - %s+F4 swaps & mounts the next CDROM-SET or IMAGEFILE, if provided.
 
 Examples:
   [32;1mimgmount[0m [37;1mD[0m [36;1m/home/USERNAME/games/doom.iso[0m -t cdrom
@@ -1187,8 +1187,8 @@ It's only possible to use SUBST on Local drives
 ║ For a short introduction for new users type: [33mINTRO[37m                 ║
 ║ For supported shell commands type: [33mHELP[37m                            ║
 ║                                                                    ║
-║ To adjust the emulated CPU speed, use [31m" PRIMARY_MOD_NAME "+F11[37m and [31m" PRIMARY_MOD_NAME "+F12[37m." PRIMARY_MOD_PAD PRIMARY_MOD_PAD "       ║
-║ To activate the keymapper [31m" PRIMARY_MOD_NAME "+F1[37m." PRIMARY_MOD_PAD "                                 ║
+║ To adjust the emulated CPU speed, use [31m%s+F11[37m and [31m%s+F12[37m.%s%s       ║
+║ To activate the keymapper [31m%s+F1[37m.%s                                 ║
 ║ For more information read the [36mREADME[37m file in the DOSBox directory. ║
 ║                                                                    ║
 
@@ -1196,13 +1196,13 @@ It's only possible to use SUBST on Local drives
 :SHELL_STARTUP_CGA
 ║ DOSBox supports Composite CGA mode.                                ║
 ║ Use [31mF12[37m to set composite output ON, OFF, or AUTO (default).        ║
-║ [31m(" MMOD2_NAME "+)F11[37m changes hue; [31m" MMOD1_NAME "+" MMOD2_NAME "+F11[37m selects early/late CGA model." PRIMARY_MOD_PAD " ║
+║ [31m(%s+)F11[37m changes hue; [31m%s+%s+F11[37m selects early/late CGA model.%s ║
 ║                                                                    ║
 
 .
 :SHELL_STARTUP_CGA_MONO
 ║ Use [31mF11[37m to cycle through green, amber, white and paper-white mode, ║
-║ and [31m" MMOD2_NAME "+F11[37m to change contrast/brightness settings.                ║
+║ and [31m%s+F11[37m to change contrast/brightness settings.                ║
 
 .
 :SHELL_STARTUP_HERC
@@ -1211,7 +1211,7 @@ It's only possible to use SUBST on Local drives
 
 .
 :SHELL_STARTUP_DEBUG
-║ Press [31m" MMOD2_NAME "+Pause[37m to enter the debugger or start the exe with [33mDEBUG[37m. ║
+║ Press [31m%s+Pause[37m to enter the debugger or start the exe with [33mDEBUG[37m. ║
 ║                                                                    ║
 
 .
