Apply formatting to messages from the language system

--- a/contrib/translations/utf-8/fr/fr-0.77.0-alpha.txt
+++ b/contrib/translations/utf-8/fr/fr-0.77.0-alpha.txt
@@ -700,19 +700,19 @@ vous devez monter les répertoires contenant les fichiers.
 
 .
 :PROGRAM_INTRO_MOUNT_WINDOWS
-[44;1m╔═════════════════════════════════════════════════════════════════════════╗
-║ [32mmount c c:\dosgames\[37m créera un lecteur C avec c:\dosgames pour contenu. ║
-║                                                                         ║
-║ [32mc:\dosgames\[37m est un exemple. Remplacez-le par votre propre répertoire de jeux.  [37m 
-╚═════════════════════════════════════════════════════════════════════════╝[0m
+[44;1m╔═══════════════════════════════════════════════════════════════════════════════╗
+║ [32mmount c c:\dosgames\[37m créera un lecteur C avec c:\dosgames pour contenu.       ║
+║                                                                               ║
+║ [32mc:\dosgames\[37m est un exemple. Remplacez-le par votre propre répertoire de jeux.[37m║
+╚═══════════════════════════════════════════════════════════════════════════════╝[0m
 
 .
 :PROGRAM_INTRO_MOUNT_OTHER
-[44;1m╔══════════════════════════════════════════════════════════════════════╗
-║ [32mmount c ~/jeuxdos[37m créera un lecteur C avec ~/jeuxdos pour contenu. ║
-║                                                                      ║
-║ [32m~/dosgames[37m est un exemple. Remplacez-le par votre propre répertoire de jeux.[37m  ║
-╚══════════════════════════════════════════════════════════════════════╝[0m
+[44;1m╔═════════════════════════════════════════════════════════════════════════════╗
+║ [32mmount c ~/jeuxdos[37m créera un lecteur C avec ~/jeuxdos pour contenu.          ║
+║                                                                             ║
+║ [32m~/dosgames[37m est un exemple. Remplacez-le par votre propre répertoire de jeux.[37m║
+╚═════════════════════════════════════════════════════════════════════════════╝[0m
 
 .
 :PROGRAM_INTRO_MOUNT_END
