--- a/contrib/translations/utf-8/en/en-0.77.0-alpha.txt
+++ b/contrib/translations/utf-8/en/en-0.77.0-alpha.txt
@@ -1,6 +1,6 @@
 :CONFIG_FULLSCREEN
-Start DOSBox directly in fullscreen.
-Press %s+Enter to switch back to window.
+Start directly in fullscreen.
+Run INTRO and see Special Keys for window control hotkeys.
 .
 :CONFIG_DISPLAY
 Number of display to use; values depend on OS and user settings.
@@ -13,16 +13,13 @@ What resolution to use for fullscreen: 'original', 'desktop'
 or a fixed size (e.g. 1024x768).
 .
 :CONFIG_WINDOWRESOLUTION
-Set window size to be used when running in windowed mode:
+Set window size when running in windowed mode:
   default:   Select the best option based on your
              environment and other settings.
-  original:  Resize window to the resolution picked by
-             the emulated program.
-  resizable: Make the emulator window resizable.
-             This is an experimental option, works only with
-             output=opengl and glshader=sharp (or none)
-  <custom>:  Scale the window content to the indicated
-             dimensions, in WxH format. For example: 1024x768.
+  small, medium, or large (or s, m, l):
+             Size the window relative to the desktop.
+  <custom>:  Scale the window to the given dimensions in
+             WxH format. For example: 1024x768.
              Scaling is not performed for output=surface.
 .
 :CONFIG_OUTPUT
@@ -34,22 +31,13 @@ Use texture_renderer=auto for an automatic choice.
 .
 :CONFIG_CAPTURE_MOUSE
 Choose a mouse control method:
-   onclick:        The mouse will be captured after the first
-                   click inside the window.
-   onstart:        The mouse is captured immediately on start
-                   (similar to real DOS).
-   seamless:       The mouse can move seamlessly in and out of DOSBox
-                   window and cannot be captured.
-   nomouse:        The mouse is disabled and hidden without any
-                   input sent to the game.
+   onclick:        Capture the mouse when clicking inside the window.
+   onstart:        Capture the mouse immediately on start.
+   seamless:       Never cature the mouse; let it move seamlessly.
+   nomouse:        Hide the mouse and don't send input to the game.
 Choose how middle-clicks are handled (second parameter):
-   middlegame:     Middle-clicks are sent to the game
-                   (%s+F10 uncaptures the mouse).
-   middlerelease:  Middle-clicks are used to uncapture the mouse
-                   (not sent to the game). However, middle-clicks
-                   will be sent to the game in fullscreen or when
-                   seamless control is set.
-                   %s+F10 will also uncapture the mouse.
+   middlegame:     Middle-clicks are sent to the game.
+   middlerelease:  Middle-click will release the captured mouse.
 Defaults (if not present or incorrect): seamless middlerelease
 .
 :CONFIG_SENSITIVITY
@@ -65,7 +53,7 @@ Wait before closing the console if dosbox has an error.
 .
 :CONFIG_PRIORITY
 Priority levels for dosbox. Second entry behind the comma is for when dosbox is not focused/minimized.
-pause is only valid for the second entry.
+pause is only valid for the second entry. auto disables priority levels and uses OS defaults
 .
 :CONFIG_MAPPERFILE
 File used to load/save the key/event mappings from.
@@ -143,18 +131,19 @@ appropriate.
 CPU Type used in emulation. auto is the fastest choice.
 .
 :CONFIG_CYCLES
-Amount of instructions DOSBox tries to emulate each millisecond.
+Number of instructions DOSBox tries to emulate each millisecond.
 Setting this value too high results in sound dropouts and lags.
 Cycles can be set in 3 ways:
   'auto'          tries to guess what a game needs.
                   It usually works, but can fail for certain games.
-  'fixed #number' will set a fixed amount of cycles. This is what you usually
+  'fixed #number' will set a fixed number of cycles. This is what you usually
                   need if 'auto' fails (Example: fixed 4000).
   'max'           will allocate as much cycles as your computer is able to
                   handle.
 .
 :CONFIG_CYCLEUP
-Number of cycles to decrease/increase with keycombos. (%s+F11/%s+F12)
+Number of cycles added or subtracted with speed control hotkeys.
+Run INTRO and see Special Keys for list of hotkeys.
 .
 :CONFIG_CYCLEDOWN
 Setting it lower than 100 will be a percentage.
@@ -209,19 +198,21 @@ For example: 'soundfont.sf2 50' will attenuate it by 50 percent.
 The scaling percentage can range from 1 to 500.
 .
 :CONFIG_MODEL
-Model of synthesizer to use. The default (auto) prefers CM-32L
-if both sets of ROMs are provided. For early Sierra games and Dune 2
-it's recommended to use 'mt32', while newer games typically made
-use of the CM-32L's extra sound effects (use 'auto' or 'cm32l')
+Model of synthesizer to use.
+'auto' picks the first model with available ROMs, in order as listed.
+'cm32l' and 'mt32' pick the first model of their type, in the order listed.
+'mt32_old' and 'mt32_new' are aliases for 1.07 and 2.04, respectively.
 .
 :CONFIG_ROMDIR
-The directory containing one or both pairs of MT-32 and/or CM-32L ROMs.
-The files must be named in capitals, as follows:
-  - MT-32 ROM pair: MT32_CONTROL.ROM and MT32_PCM.ROM
-  - CM-32L ROM pair: CM32L_CONTROL.ROM and CM32L_PCM.ROM
+The directory containing ROMs for one or more models.
 The directory can be absolute or relative, or leave it blank to
 use the 'mt32-roms' directory in your DOSBox configuration
-directory, followed by checking other common system locations.
+directory. Other common system locations will be checked as well.
+ROM files inside this directory may include any of the following:
+  - MT32_CONTROL.ROM and MT32_PCM.ROM, for the 'mt32' model.
+  - CM32L_CONTROL.ROM and CM32L_PCM.ROM, for the 'cm32l' model.
+  - Unzipped MAME MT-32 and CM-32L ROMs, for the versioned models.
+
 .
 :CONFIG_SBTYPE
 Type of Sound Blaster to emulate. 'gb' is Game Blaster.
@@ -271,6 +262,32 @@ there should be a MIDI directory that contains
 the patch files for GUS playback. Patch sets used
 with Timidity should work fine.
 .
+:CONFIG_SIDMODEL
+Model of chip to emulate in the Innovation SSI-2001 card:
+ - auto:  Selects the 6581 chip.
+ - 6581:  The original chip, known for its bassy and rich character.
+ - 8580:  A later revision that more closely matched the SID specification.
+          It fixed the 6581's DC bias and is less prone to distortion.
+          The 8580 is an option on reproduction cards, like the DuoSID.
+ - none:  Disables the card.
+.
+:CONFIG_SIDCLOCK
+The SID chip's clock frequency, which is jumperable on reproduction cards.
+ - default: uses 0.895 MHz, per the original SSI-2001 card.
+ - c64ntsc: uses 1.023 MHz, per NTSC Commodore PCs and the DuoSID.
+ - c64pal:  uses 0.985 MHz, per PAL Commodore PCs and the DuoSID.
+ - hardsid: uses 1.000 MHz, available on the DuoSID.
+.
+:CONFIG_SIDPORT
+The IO port address of the Innovation SSI-2001.
+.
+:CONFIG_6581FILTER
+The SID's analog filtering meant that each chip was physically unique.
+Adjusts the 6581's filtering strength as a percent from 0 to 100.
+.
+:CONFIG_8580FILTER
+Adjusts the 8580's filtering strength as a percent from 0 to 100.
+.
 :CONFIG_PCSPEAKER
 Enable PC-Speaker emulation.
 .
@@ -290,6 +307,9 @@ Sample rate of the Tandy 3-Voice generation.
 .
 :CONFIG_DISNEY
 Enable Disney Sound Source emulation. (Covox Voice Master and Speech Thing compatible).
+.
+:CONFIG_PS1AUDIO
+Enable IBM PS/1 Audio emulation.
 .
 :CONFIG_JOYSTICKTYPE
 Type of joystick to emulate: auto (default),
@@ -720,7 +740,7 @@ enter a directory (recognised by the [33;1m[][0m in a directory listing).
 You can run programs/files with extensions [31m.exe .bat[0m and [31m.com[0m.
 
 .
-:PROGRAM_INTRO_CDROM
+:PROGRAM_INTRO_CDROM_WINDOWS
 [2J[32;1mHow to mount a virtual CD-ROM Drive in DOSBox:[0m
 DOSBox provides CD-ROM emulation on several levels.
 
@@ -736,6 +756,28 @@ If it doesn't work you might have to tell DOSBox the label of the CD-ROM:
 Additionally, you can use imgmount to mount iso or cue/bin images:
 
 [34;1mimgmount D C:\cd.iso -t cdrom[0m
+
+[34;1mimgmount D C:\cd.cue -t cdrom[0m
+
+.
+:PROGRAM_INTRO_CDROM_OTHER
+[2J[32;1mHow to mount a virtual CD-ROM Drive in DOSBox:[0m
+DOSBox provides CD-ROM emulation on several levels.
+
+This works on all normal directories, installs MSCDEX and marks the files
+read-only. Usually this is enough for most games:
+
+[34;1mmount D ~/example -t cdrom[0m
+
+If it doesn't work you might have to tell DOSBox the label of the CD-ROM:
+
+[34;1mmount D ~/example -t cdrom -label CDLABEL[0m
+
+Additionally, you can use imgmount to mount iso or cue/bin images:
+
+[34;1mimgmount D ~/cd.iso -t cdrom[0m
+
+[34;1mimgmount D ~/cd.cue -t cdrom[0m
 
 .
 :PROGRAM_INTRO_SPECIAL
@@ -1277,6 +1319,10 @@ Exit from the shell.
 Show help.
 
 .
+:SHELL_CMD_HELP_HELP_LONG
+HELP [command]
+
+.
 :SHELL_CMD_MKDIR_HELP
 Make Directory.
 
@@ -1344,6 +1390,27 @@ Note that you can not specify a new drive or path for your destination file.
 .
 :SHELL_CMD_DELETE_HELP
 Removes one or more files.
+
+.
+:SHELL_CMD_DELETE_HELP_LONG
+Usage:
+  [32;1mdel[0m [36;1mPATTERN[0m
+  [32;1merase[0m [36;1mPATTERN[0m
+
+Where:
+  [36;1mPATTERN[0m can be either an exact filename (such as [36;1mfile.txt[0m) or an inexact
+          filename using one or more wildcards, which are the asterisk (*)
+          representing any sequence of one or more characters, and the question
+          mark (?) representing any single character, such as [36;1m*.bat[0m and [36;1mc?.txt[0m.
+
+Warning:
+  Be careful when using a pattern with wildcards, especially [36;1m*.*[0m, as all files
+  matching the pattern will be deleted.
+
+Examples:
+  [32;1mdel[0m [36;1mtest.bat[0m
+  [32;1mdel[0m [36;1mc*.*[0m
+  [32;1mdel[0m [36;1ma?b.c*[0m
 
 .
 :SHELL_CMD_COPY_HELP
