--- a/contrib/translations/utf-8/fr/fr-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/fr/fr-0.78.0-alpha.txt
@@ -1195,20 +1195,20 @@ Il n'est possible d'utiliser SUBST que sur les lecteurs locaux.
 
 .
 :SHELL_STARTUP_CGA
-║ DOSBox supporte le mode composite CGA.                                ║
-║ Utilisez [31mF12[37m pour régler la sortiecomposite sur ON, OFF, ou AUTO (défaut).        ║
-║ [31m(%s+)F11[37m change la teinte; [31m%s+%s+F11[37m sélectionne le premier/dernier modèle CGA.%s║
-║                                                                    ║
+║ DOSBox supporte le mode composite CGA.                                     ║
+║ Utilisez [31mF12[37m pour régler la sortiecomposite sur ON, OFF, ou AUTO (défaut). ║
+║ [31m(%s+)F11[37m change la teinte; [31m%s+%s+F11[37m sélectionne type de modèle CGA.%s   ║
+║                                                                            ║
 
 .
 :SHELL_STARTUP_CGA_MONO
-║ Utilisez [31mF11[37m pour passer au vert, ambre, blanc et blanc-papier,   ║
-║ et [31m%sF11[37m pour changer le contraste/la luminosité.               ║
+║ Utilisez [31mF11[37m pour passer au vert, ambre, blanc et blanc-papier,            ║
+║ et [31m%s+F11[37m pour changer le contraste/la luminosité.                        ║
 
 .
 :SHELL_STARTUP_HERC
-║ Utilisez [31mF11[37m pour passer au blanc, ambre, et vert monochrome. ║
-║                                                                    ║
+║ Utilisez [31mF11[37m pour passer au blanc, ambre, et vert monochrome.              ║
+║                                                                            ║
 
 .
 :SHELL_STARTUP_DEBUG
