--- a/contrib/translations/pl/pl_PL.lng
+++ b/contrib/translations/pl/pl_PL.lng
@@ -1189,13 +1189,13 @@ Polecenia SUBST mo¾na u¾y† jedynie na lokalnych dyskach
 :SHELL_STARTUP_CGA
 º DOSBox wspiera tryb Composite CGA.                                 º
 º Wci˜nij [31mF12[37m aby wˆ¥czy† lub wyˆ¥czy† tryb composite.               º
-º [31m(%s+)F11[37m zmienia barw©; [31m%s+%s+F11[37m zmienia model CGA.%s         º
+º [31m(%s+)F11[37m zmienia barw©; [31m%s+%s+F11[37m zmienia model CGA.%s           º
 º                                                                    º
 
 .
 :SHELL_STARTUP_CGA_MONO
-º Wci˜nij [31mF11[37m aby zmieni† kolor ekaranu: jasny biaˆy, biaˆy, pomaraäczowy, zielony. º
-º i [31m%sF11[37m aby zmieni† kontrast/jasno˜†.    º
+º Wci˜nij [31mF11[37m kolor mono: jasny biaˆy, biaˆy, pomaraäczowy, zielony. º
+º i [31m%s+F11[37m aby zmieni† kontrast/jasno˜†.                            º
 
 .
 :SHELL_STARTUP_HERC
